--- a/resampling.ipynb
+++ b/resampling.ipynb
@@ -336,10 +336,13 @@
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "X_df = df.drop(columns=['loan_status'])\n",
+    "X = pd.get_dummies(X_df, columns=[\"home_ownership\",\"verification_status\",\"issue_d\",\n",
+    "                                  \"pymnt_plan\",\"initial_list_status\",\"next_pymnt_d\",\"debt_settlement_flag\",\n",
+    "                                  \"application_type\",\"hardship_flag\"], drop_first = Tru\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = df['loan_status'].to_frame()"
    ]
   },
   {
@@ -692,7 +695,14 @@
    "outputs": [],
    "source": [
     "# Create X_train, X_test, y_train, y_test\n",
-    "# YOUR CODE HERE"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)\n",
+    "\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)\n",
+    "print(y_train.shape)\n",
+    "print(y_test.shape)"
    ]
   },
   {
@@ -701,7 +711,7 @@
    "source": [
     "## Data Pre-Processing\n",
     "\n",
-    "Scale the training and testing data using the `StandardScaler` from `sklearn`. Remember that when scaling the data, you only scale the features data (`X_train` and `X_testing`)."
+    "Scaled the training and testing data using the `StandardScaler` from `sklearn`. ##Remember that when scaling the data, you only scale the features data (`X_train` and `X_testing`)."
    ]
   },
   {
@@ -723,7 +733,7 @@
    "source": [
     "# Fit the Standard Scaler with the training data\n",
     "# When fitting scaling functions, only train on the training dataset\n",
-    "# YOUR CODE HERE"
+    "x_scaler = scaler.fit(X_train)"
    ]
   },
   {
@@ -733,7 +743,8 @@
    "outputs": [],
    "source": [
     "# Scale the training and testing data\n",
-    "# YOUR CODE HERE"
+    "X_trained_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -778,7 +789,13 @@
    ],
    "source": [
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "ros = RandomOverSampler(random_state=1)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)\n",
+    "\n",
+    "y_resampled['loan_status'].value_counts()"
    ]
   },
   {
@@ -802,7 +819,10 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -823,7 +843,10 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -845,7 +868,9 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -869,7 +894,9 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -897,7 +924,14 @@
    ],
    "source": [
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "X_resampled, y_resampled = SMOTE(random_state=1, sampling_strategy=1.0).fit_resample(\n",
+    "    X_train, y_train\n",
+    ")\n",
+    "from collections import Counter\n",
+    "\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -921,7 +955,8 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)\n"
    ]
   },
   {
@@ -942,7 +977,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -964,7 +1000,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -988,7 +1024,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1026,7 +1062,14 @@
    ],
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
-    "# YOUR CODE HERE"
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "\n",
+    "cc = ClusterCentroids(random_state=1)\n",
+    "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -1050,7 +1093,10 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -1071,7 +1117,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1093,7 +1140,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1117,7 +1164,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1155,7 +1202,11 @@
    ],
    "source": [
     "# Resample the training data with SMOTEENN\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "\n",
+    "sm = SMOTEENN(random_state=1)\n",
+    "X_resampled, y_resampled = sm.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -1179,7 +1230,8 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -1200,7 +1252,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = model.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1222,7 +1275,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
@@ -1246,7 +1299,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
