--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -342,10 +342,14 @@
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "#get dummies for object type columns\n",
+    "X_df = df.drop(columns=['loan_status'])\n",
+    "X = pd.get_dummies(X_df, columns=[\"home_ownership\",\"verification_status\",\"issue_d\",\n",
+    "                                  \"pymnt_plan\",\"initial_list_status\",\"next_pymnt_d\",\"debt_settlement_flag\",\n",
+    "                                  \"application_type\",\"hardship_flag\"], drop_first = True)\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y =  df['loan_status'].to_frame()"
    ]
   },
   {
@@ -698,7 +702,14 @@
    "outputs": [],
    "source": [
     "# Split the X and y into X_train, X_test, y_train, y_test\n",
-    "# YOUR CODE HERE"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)\n",
+    "\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)\n",
+    "print(y_train.shape)\n",
+    "print(y_test.shape)"
    ]
   },
   {
@@ -729,7 +740,7 @@
    "source": [
     "# Fit the Standard Scaler with the training data\n",
     "# When fitting scaling functions, only train on the training dataset\n",
-    "# YOUR CODE HERE"
+    "x_scaler = scaler.fit(X_train)"
    ]
   },
   {
@@ -739,7 +750,8 @@
    "outputs": [],
    "source": [
     "# Scale the training and testing data\n",
-    "# YOUR CODE HERE"
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -790,7 +802,11 @@
    ],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "\n",
+    "brfc = BalancedRandomForestClassifier(n_estimators =1000, random_state=1)\n",
+    "model = brfc.fit(X_train_scaled, y_train)\n",
+    "BalancedRandomForestClassifier()"
    ]
   },
   {
@@ -811,7 +827,10 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "\n",
+    "predictions = model.predict(X_test_scaled)\n",
+    "accuracy_score(y_test, predictions)"
    ]
   },
   {
@@ -833,7 +852,7 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "confusion_matrix(y_test, predictions)"
    ]
   },
   {
@@ -857,7 +876,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report(y_test, predictions))"
    ]
   },
   {
@@ -969,7 +988,9 @@
    ],
    "source": [
     "# List the features sorted in descending order by feature importance\n",
-    "# YOUR CODE HERE"
+    "importances = model.feature_importances_\n",
+    "\n",
+    "sorted(zip(model.feature_importances_, X.columns), reverse=True)[:20]"
    ]
   },
   {
@@ -999,7 +1020,16 @@
    ],
    "source": [
     "# Train the EasyEnsembleClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import EasyEnsembleClassifier\n",
+    "\n",
+    "model = EasyEnsembleClassifier(base_estimator=None, n_estimators=100, n_jobs=1, random_state=1, \n",
+    "                                   replacement=False, sampling_strategy='auto', verbose=0, \n",
+    "                                   warm_start=False)\n",
+    "\n",
+    "model.fit(X_train_scaled, y_train)\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "EasyEnsembleClassifier()"
    ]
   },
   {
@@ -1020,7 +1050,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "predictions = model.predict(X_test_scaled)\n",
+    "balanced_accuracy_score(y_test, predictions)"
    ]
   },
   {
@@ -1042,7 +1073,8 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "cm"
    ]
   },
   {
@@ -1066,7 +1098,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, predictions))"
    ]
   },
   {
